# google-ads-agent

./: .gitignore  CLAUDE.md  README.md  Turkey_Greece_GV_Campaign_Report.html  install.bat  install.sh  start.bat  start.sh
backend/: .env.example  dry_run.py  generate_mapleroots_report.py  greece_gv_snapshot.txt  greece_gv_tr_snapshot.txt  mcp_config.json  pgv_new_page_snapshot.txt  pyproject.toml  snapshot.txt  snapshot_addto2.txt  snapshot_adgroups.txt  snapshot_adgroups2.txt  snapshot_adgroups3.txt  snapshot_ag2_h1_pin.txt  snapshot_assets_menu.txt  snapshot_bidding.txt  snapshot_bidding2.txt  snapshot_bidding3.txt  snapshot_bidding4.txt  snapshot_bidding5.txt  snapshot_bidding_dropdown.txt  snapshot_callout_dropdown.txt  snapshot_campaigns.txt  snapshot_capi_override.txt  snapshot_experiment.txt  snapshot_gads_conversions.txt  snapshot_gcs_panama.txt  snapshot_ggv_panama.txt  snapshot_gtm_variables.txt  snapshot_header2.txt  snapshot_header_dropdown.txt  snapshot_header_types.txt  snapshot_localhost.txt  snapshot_lp_form.txt  snapshot_panama_form.txt  snapshot_panama_test.txt  snapshot_snippet_dropdown.txt  snapshot_tag_types.txt  snapshot_temp.txt  snapshot_temp2.txt  (+4 more)
backend/app/: config.py  database.py  main.py  mcp_server.py
backend/data/: mcp_config.example.json  mcp_config.json  tool_validation_report.json
backend/google_ads/: mcp_main.py  sdk_client.py  tool_registry.py
backend/tests/: test_account_audit_ritual.py  test_account_events.py  test_asset_crud_completion.py  test_asset_extensions.py  test_auth_status.py  test_brief_source.py  test_live_head.py  (+34 more)
(+826 files in other folders)
